[package]
name = "sandpack-cdn"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
thiserror = "1.0.30"
env_logger = "0.9.0"
flate2 = "1.0.22"
tar = "0.4.37"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
reqwest = { version = "0.11.7", features = ["json", "brotli", "gzip", "deflate"] }
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
tokio = { version = "1.17.0", features = ["full"] }
url = "2.2.2"
glob = "0.3.0"
swc_ecmascript = { version = "0.130.0", features = ["parser", "transforms", "module", "optimization", "react", "typescript", "utils", "visit", "codegen", "utils"] }
swc_ecma_preset_env = "0.104.0"
swc_common = { version = "0.17.13", features = ["tty-emitter", "sourcemap"] }
swc_atoms = "0.2.9"
lazy_static = "1.4.0"
lru = "0.7.0"
chrono = { version = "0.4.19", features = ["serde"] }
base64 = "0.13.0"
node-semver = "2.0.0"
futures = "0.3.17"
parking_lot = "0.11.2"
regex = "1.5.4"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
tracing-opentelemetry = "0.17.2"
tracing-futures = "0.2.5"
opentelemetry = { version = "0.17.0", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.10.0", features = ["tonic", "tls", "tls-roots"] }
tonic = "0.6.2"
warp = {version = "0.3.2", features = ["compression"]}
dotenv = "0.15.0"
