[package]
name = "sandpack-cdn"
version = "0.0.0"
edition = "2021"
publish = false

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
thiserror = "1.0.30"
flate2 = "1.0.22"
tar = "0.4.37"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_bytes = "0.11.7"
serde_with = "2.1.0"
reqwest = { version = "0.11.7", features = ["json", "brotli", "gzip", "deflate"] }
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
tokio = { version = "1.17.0", features = ["full"] }
url = "2.2.2"
glob = "0.3.0"
lazy_static = "1.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
base64-simd = "0.7.0"
node-semver = "2.0.0"
parking_lot = "0.11.2"
regex = "1.5.4"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
tracing-opentelemetry = "0.17.2"
tracing-futures = "0.2.5"
opentelemetry = { version = "0.17.0", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.10.0", features = ["tonic", "tls", "tls-roots"] }
tonic = "0.6.2"
warp = {version = "0.3.2", features = ["compression"]}
dotenv = "0.15.0"
moka = { version = "0.8.2", features = ["future"] }
rmp = "0.8.11"
rmp-serde = "1.1.1"
tracing-tree = "0.2.1"
rusqlite = { version = "0.28.0", features = ["bundled"] }
lru = "0.9.0"
rocksdb = "0.20.1"
