[package]
name = "sandpack-cdn"
version = "0.0.0"
edition = "2021"
publish = false

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
thiserror = "1.0.38"
flate2 = "1.0.25"
tar = "0.4.38"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_bytes = "0.11.9"
serde_with = "2.2.0"
reqwest = { version = "0.11.14", features = ["json", "brotli", "gzip", "deflate"] }
reqwest-middleware = "0.2.0"
reqwest-retry = "0.2.1"
tokio = { version = "1.25.0", features = ["full"] }
url = "2.3.1"
glob = "0.3.1"
lazy_static = "1.4.0"
chrono = { version = "0.4.23", features = ["serde"] }
base64-simd = "0.8.0"
node-semver = "2.1.0"
parking_lot = "0.12.1"
regex = "1.7.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-opentelemetry = "0.18.0"
tracing-futures = "0.2.5"
tracing-tree = "0.2.2"
opentelemetry = { version = "0.18.0", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.11.0", features = ["tonic", "tls", "tls-roots"] }
tonic = "0.8.3"
warp = {version = "0.3.3", features = ["compression"]}
dotenv = "0.15.0"
moka = { version = "0.10.0", features = ["future"] }
rmp = "0.8.11"
rmp-serde = "1.1.1"
lru = "0.9.0"
rocksdb = "0.20.1"
